multimap.containsValue fix
git-svn-id: http://hazelcast.googlecode.com/svn/trunk@1096 3f8e66b6-ca9d-11dd-a2b5-e5f827957e07