@@ -62,6 +62,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>-Xmx512m -XX:MaxPermSize=128M</argLine>                    
                     <excludes>
                         <exclude>**/ClusterTest.java</exclude>
                         <exclude>**/QueryTest.java</exclude>
